<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:title="@string/keys"
        android:icon="@drawable/ic_menu_account_list"
        app:showAsAction="always" />
     <item android:id="@+id/action_add"
         android:title="@string/keyAdd"
          android:icon="@android:drawable/ic_menu_add"
         app:showAsAction="always" />
    <item android:id="@+id/action_des_sample_keys"
        android:title="@string/keyAddDesSamples"
        app:showAsAction="never" />
    <item android:id="@+id/action_3des_sample_keys"
        android:title="@string/keyAdd3DesSamples"
        app:showAsAction="never" />
    <item android:id="@+id/action_3k3des_sample_keys"
        android:title="@string/keyAdd3K3DesSamples"
        app:showAsAction="never" />
    <item android:id="@+id/action_aes_sample_keys"
        android:title="@string/keyAddAesSamples"
        app:showAsAction="never" />
    <item android:id="@+id/action_save"
        android:title="@string/fileSave"
          android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="always" />
    <item android:id="@+id/action_add_app"
        android:title="@string/applicationAdd"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="never" />
    <item android:id="@+id/action_add_file"
        android:title="@string/fileAdd"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="never" />
    <item android:id="@+id/action_free_memory"
        android:title="@string/freeMemory"
        app:showAsAction="never" />
    <item android:id="@+id/action_format_picc"
        android:title="@string/formatPicc"
        app:showAsAction="never" />
    
</menu>
