<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"

	android:orientation="vertical"
	android:background="@color/white"
	android:paddingLeft="@dimen/activity_horizontal_fragment_margin"
	android:paddingRight="@dimen/activity_horizontal_fragment_margin">
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/fileNew"
	        android:layout_marginBottom="10dp"
	        android:textSize="30sp"
	        android:layout_gravity="center_horizontal"
	        />

	<EditText
		android:id="@+id/etFileId"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="8dp"
		android:ems="10"
		android:inputType="text"
		android:text="01" />

	<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">
		<RadioButton android:id="@+id/rbStandardFile"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:checked="true"
			android:text="@string/rbStandardFile"
			/>
		<RadioButton android:id="@+id/rbValueFile"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/rbValueFile"
			/>
		<RadioButton android:id="@+id/rbCyclicFile"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/rbCyclicFile"
			/>
	</RadioGroup>

	<Button
		android:id="@+id/btnCreateFile"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="8dp"
		android:text="create file" />

	<TextView
		android:id="@+id/tvLog"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="8dp"
		android:text="The log will appear here" />

</LinearLayout>
